; ModuleID = '/home/carl/AnghaBench/lede/package/kernel/broadcom-wl/src/extr_wlc.c_wlc_ioctl.c'
source_filename = "/home/carl/AnghaBench/lede/package/kernel/broadcom-wl/src/extr_wlc.c_wlc_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NOARG = common dso_local global i32 0, align 4
@interface = common dso_local global i32 0, align 4
@PARAM_TYPE = common dso_local global i32 0, align 4
@SET = common dso_local global i32 0, align 4
@BUFSIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i8*)* @wlc_ioctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wlc_ioctl(i32 %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = bitcast i8* %10 to i32*
  store i32* %11, i32** %8, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %9, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* @NOARG, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %3
  %19 = load i32, i32* @interface, align 4
  %20 = load i32, i32* %9, align 4
  %21 = call i32 @wl_ioctl(i32 %19, i32 %20, i8* null, i32 0)
  store i32 %21, i32* %4, align 4
  br label %76

22:                                               ; preds = %3
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* @PARAM_TYPE, align 4
  %25 = and i32 %23, %24
  switch i32 %25, label %75 [
    i32 129, label %26
    i32 130, label %42
    i32 128, label %58
  ]

26:                                               ; preds = %22
  %27 = load i32, i32* @interface, align 4
  %28 = load i32, i32* %5, align 4
  %29 = load i32, i32* @SET, align 4
  %30 = and i32 %28, %29
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %26
  %33 = load i32, i32* %9, align 4
  br label %37

34:                                               ; preds = %26
  %35 = load i32, i32* %9, align 4
  %36 = lshr i32 %35, 16
  br label %37

37:                                               ; preds = %34, %32
  %38 = phi i32 [ %33, %32 ], [ %36, %34 ]
  %39 = and i32 %38, 65535
  %40 = load i8*, i8** %7, align 8
  %41 = call i32 @wl_ioctl(i32 %27, i32 %39, i8* %40, i32 6)
  store i32 %41, i32* %4, align 4
  br label %76

42:                                               ; preds = %22
  %43 = load i32, i32* @interface, align 4
  %44 = load i32, i32* %5, align 4
  %45 = load i32, i32* @SET, align 4
  %46 = and i32 %44, %45
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %48, label %50

48:                                               ; preds = %42
  %49 = load i32, i32* %9, align 4
  br label %53

50:                                               ; preds = %42
  %51 = load i32, i32* %9, align 4
  %52 = lshr i32 %51, 16
  br label %53

53:                                               ; preds = %50, %48
  %54 = phi i32 [ %49, %48 ], [ %52, %50 ]
  %55 = and i32 %54, 65535
  %56 = load i8*, i8** %7, align 8
  %57 = call i32 @wl_ioctl(i32 %43, i32 %55, i8* %56, i32 4)
  store i32 %57, i32* %4, align 4
  br label %76

58:                                               ; preds = %22
  %59 = load i32, i32* @interface, align 4
  %60 = load i32, i32* %5, align 4
  %61 = load i32, i32* @SET, align 4
  %62 = and i32 %60, %61
  %63 = icmp ne i32 %62, 0
  br i1 %63, label %64, label %66

64:                                               ; preds = %58
  %65 = load i32, i32* %9, align 4
  br label %69

66:                                               ; preds = %58
  %67 = load i32, i32* %9, align 4
  %68 = lshr i32 %67, 16
  br label %69

69:                                               ; preds = %66, %64
  %70 = phi i32 [ %65, %64 ], [ %68, %66 ]
  %71 = and i32 %70, 65535
  %72 = load i8*, i8** %7, align 8
  %73 = load i32, i32* @BUFSIZE, align 4
  %74 = call i32 @wl_ioctl(i32 %59, i32 %71, i8* %72, i32 %73)
  store i32 %74, i32* %4, align 4
  br label %76

75:                                               ; preds = %22
  store i32 0, i32* %4, align 4
  br label %76

76:                                               ; preds = %75, %69, %53, %37, %18
  %77 = load i32, i32* %4, align 4
  ret i32 %77
}

declare dso_local i32 @wl_ioctl(i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
